--- a/.github/workflows/pr-preview-deploy.yml
+++ b/.github/workflows/pr-preview-deploy.yml
@@ -71,7 +71,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: pr-${{ github.event.client_payload.pull_request.number }}-syuilo
+        name: pr-${{ github.event.client_payload.pull_request.number }}-evgen
         timeout: 15m
 
     # Update check run called "integration-fork"
