--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,7 +14,7 @@
 		"@fortawesome/fontawesome-free": "6.1.2",
 		"@rollup/plugin-alias": "3.1.9",
 		"@rollup/plugin-json": "4.1.0",
-		"@syuilo/aiscript": "0.11.1",
+		"@evgen/aiscript": "0.11.1",
 		"@vitejs/plugin-vue": "3.1.0",
 		"@vue/compiler-sfc": "3.2.39",
 		"autobind-decorator": "2.4.0",
@@ -48,7 +48,7 @@
 		"seedrandom": "3.0.5",
 		"strict-event-emitter-types": "2.0.0",
 		"stringz": "2.1.0",
-		"syuilo-password-strength": "0.0.1",
+		"evgen-password-strength": "0.0.1",
 		"textarea-caret": "3.1.0",
 		"three": "0.144.0",
 		"throttle-debounce": "5.0.0",
