--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "speechka",
-	"version": "2.1.61",
-	"codename": "indigo",
+	"version": "2.2.20",
+	"codename": "swim",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Evgen0922/speechka_develop.git"
