--- a/packages/client/src/themes/d-u0.json5
+++ b/packages/client/src/themes/d-u0.json5
@@ -42,7 +42,8 @@
 		hashtag: '#e6b422',
 		mention: '@accent',
 		modalBg: 'rgba(0, 0, 0, 0.5)',
-		success: '#86b300',
+		success: '#606df7',
+		// success: '#86b300',
 		buttonBg: 'rgba(255, 255, 255, 0.05)',
 		switchBg: 'rgba(255, 255, 255, 0.15)',
 		acrylicBg: ':alpha<0.5<@bg',
