--- a/packages/client/src/themes/l-vivid.json5
+++ b/packages/client/src/themes/l-vivid.json5
@@ -29,7 +29,8 @@
 		hashtag: '#92d400',
 		mention: '@accent',
 		modalBg: 'rgba(0, 0, 0, 0.3)',
-		success: '#86b300',
+		success: '#606df7',
+		// success: '#86b300',
 		buttonBg: 'rgba(0, 0, 0, 0.05)',
 		acrylicBg: ':alpha<0.5<@bg',
 		cwHoverBg: '#bbc4ce',
