--- a/packages/client/src/themes/d-astro.json5
+++ b/packages/client/src/themes/d-astro.json5
@@ -26,7 +26,8 @@
 		hashtag: '#ff9156',
 		mention: '#ffd152',
 		modalBg: 'rgba(0, 0, 0, 0.5)',
-		success: '#86b300',
+		success: '#606df7',
+		// success: '#86b300',
 		buttonBg: 'rgba(255, 255, 255, 0.05)',
 		acrylicBg: ':alpha<0.5<@bg',
 		cwHoverBg: '#707b97',
